Made header not fixed on mobile

--- a/styles.css
+++ b/styles.css
@@ -154,6 +154,10 @@ and (max-width : 55rem) {
     gap: 0;
   }
 
+  .header {
+    position: unset;
+  }
+
   .content section img {
     order: -1;
   }
